# kani-vision

./: .readthedocs.yaml  README.md  pyproject.toml  requirements-no-deps.txt  requirements.txt
.github/workflows/: docs.yml  pytest.yml  pythonpublish.yml
docs/: api_reference.rst  conf.py  index.rst
docs/_extra/: robots.txt
examples/: colab_quickstart.ipynb  gpt-vision.py  llava-local.py
kani/ext/vision/: __init__.py  cli.py  exceptions.py  parts.py  utils.py
kani/ext/vision/engines/llava/: __init__.py  engine.py
kani/ext/vision/engines/openai/: __init__.py  engine.py  img_tokens.py  models.py
scripts/: gpt-4v-image-sizes.py
tests/: test_openai_vision_tokens.py
